<resources>
    <string name="app_name">Ghibli Trunk</string>
    <string name="user_string">User</string>
    <string name="registrarse_string">Not registered yet? Sign up here.</string>
    <string name="createaccount_string">Create Account</string>
    <string name="password_string">Password</string>
    <string name="tv_login">LOG IN</string>
    <string name="valid_user_msg">Credentials valid!</string>
    <string name="invalid_user_msg">Credentials no valid</string>
    <string name="tv_register">join</string>
    <string name="repeat_password">repeat password</string>
    <string name="visit_website">trakt.tv</string>
    <string name="greeting">Hello, %s!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_option">Movies</string>
    <string name="character_option">Characters</string>
    <string name="library_option">Library</string>
    <string name="recent_option">Recent</string>
    <string name="sports">Sports</string>
    <string name="politics">Politics</string>
    <string name="apply">Apply</string>
    <string name="categories">CATEGORIES</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="password_forget">I forgot my password.</string>
    <string name="introduce_email">Introduce your recovery email</string>
    <string name="welcome_msg">Connecting People</string>
    <string name="trending_title">TRENDING</string>
    <string name="my_likes_title">MY LIKES</string>
    <string name="character_title">CHARACTERS</string>
    <string name="movie_title">MOVIES</string>
    <string name="last_name_join">Last name</string>
    <string name="sign_up_join">Sign up</string>
    <!-- Navigation Drawer -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="history_title">HISTORY</string>
    <string name="comment_button">Leave a comment...</string>
    <string name="comments_section">COMMENTS</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="sent_button">Sent</string>

</resources>