<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tb_filter_politics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191C2E"
    tools:context=".view.FilterActivity">

    <TextView
        android:id="@+id/textView9"
        style="@style/CategoryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/technology"
        app:layout_constraintEnd_toStartOf="@+id/tb_filter_business"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ToggleButton
        android:id="@+id/tb_filter_technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_filter_science" />

    <ToggleButton
        android:id="@+id/tb_filter_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_filter_general" />

    <TextView
        android:id="@+id/textView7"
        style="@style/CategoryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:text="@string/health"
        app:layout_constraintEnd_toStartOf="@+id/tb_filter_business"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ToggleButton
        android:id="@+id/tb_filter_science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_filter_health" />

    <TextView
        android:id="@+id/textView8"
        style="@style/CategoryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:text="@string/science"
        app:layout_constraintEnd_toStartOf="@+id/tb_filter_business"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ToggleButton
        android:id="@+id/tb_filter_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_filter_entertainment" />

    <TextView
        android:id="@+id/textView5"
        style="@style/CategoryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/entertainment"
        app:layout_constraintEnd_toStartOf="@+id/tb_filter_business"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ToggleButton
        android:id="@+id/tb_filter_entertainment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_filter_sports" />

    <TextView
        android:id="@+id/textView6"
        style="@style/CategoryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/general"
        app:layout_constraintEnd_toStartOf="@+id/tb_filter_business"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/createaccount_string"
        android:text="@string/categories"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#E53054"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlCompat"
        tools:textColorHint="#ED3257" />

    <ToggleButton
        android:id="@+id/tb_filter_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_filter_business" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/sports"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tb_filter_business"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/business"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tb_filter_business"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ToggleButton
        android:id="@+id/tb_filter_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/bt_apply"
        android:layout_width="197dp"
        android:layout_height="46dp"

        android:layout_marginBottom="52dp"
        android:backgroundTint="#ED3257"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_cierre"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>