<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191C2E"
    android:paddingHorizontal="10dp"
    android:paddingVertical="100dp"
    tools:context=".view.LoginActivity">

    <!-- TODO: Insertar logo en la imagen-->
    <ImageView
        android:id="@+id/tv_login_title"
        android:layout_width="371dp"
        android:layout_height="196dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-37dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:autofillHints="username"
        android:backgroundTint="#ED3257"
        android:fontFamily="@font/open_sans"
        android:gravity="start"
        android:hint="@string/user_string"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="#D3D3D3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        tools:textColorHint="#D3D3D3" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:backgroundTint="#ED3257"
        android:fontFamily="@font/open_sans"
        android:gravity="start"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="#D3D3D3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:ignore="MissingConstraints"
        tools:textColorHint="#D3D3D3" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:backgroundTint="#ED3257"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/tv_login"
        android:textAllCaps="false"
        android:textColor="#2A2929"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/bt_join"
        android:layout_width="261dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:fontFamily="@font/open_sans"
        android:gravity="center_horizontal"
        android:hint="@string/registrarse_string"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        tools:ignore="TextViewEdits"
        tools:textColorHint="#FFFFFF" />

    <TextView
        android:id="@+id/bt_passwordForget"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:fontFamily="@font/open_sans"
        android:gravity="center_horizontal"
        android:inputType="text|textPhonetic"
        android:text="@string/password_forget"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_join"
        tools:ignore="TextViewEdits"
        tools:textColorHint="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>